--- a/Escola-Saber-Mais/src/main/resources/application.properties
+++ b/Escola-Saber-Mais/src/main/resources/application.properties
@@ -1,18 +1,14 @@
-spring.application.name=Escola-Saber-Mais
-
-# Configuração do banco de dados H2
-spring.datasource.url=jdbc:h2:mem:escola_db
-spring.datasource.driver-class-name=org.h2.Driver
+# Banco de dados H2
+spring.datasource.url=jdbc:h2:mem:mydb
 spring.datasource.username=sa
 spring.datasource.password=
-spring.h2.console.enabled=true
+spring.datasource.driver-class-name=org.h2.Driver
 
-# JPA/Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Configurações do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Outras configurações
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# Configuração da console H2
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.web-allow-others=true
